# PostGen

./: .env.example  .gitignore  LICENSE  README.md  install.sh  post-gen.py  pyproject.toml
.github/workflows/: pytest_pipeline.yml
core/: cli.py  post_gen.py  view.py
tests/: test_post_gen.py
