[project]
name = "postgen"
version = "0.1.0"
description = "Post generator using Google Generative AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "python-dotenv",
    "customtkinter",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
]
